samples/_failures_safe/1761207827_7be2b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9d92bbc.c: In function ‘parser_init’:
./samples/SAFE/__tmp_a9d92bbc.c:153:46: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  153 |     parser->current_token = lexer_next_token(lex
      |                                              ^~~
      |                                              lexer
./samples/SAFE/__tmp_a9d92bbc.c:153:46: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a9d92bbc.c:153:49: error: expected ‘)’ at end of input
  153 |     parser->current_token = lexer_next_token(lex
      |                                             ~   ^
      |                                                 )
./samples/SAFE/__tmp_a9d92bbc.c:153:5: error: expected declaration or statement at end of input
  153 |     parser->current_token = lexer_next_token(lex
      |     ^~~~~~
